2.10.16
-------
(RB=551668)
Data generator generates unambiguous @see link.

2.10.15
-------
(RB=550595)
Move request builder spec code from restli-swift repo to pegasus repo so that Android Rest.li client
can use it too. Currently this has not been used by Pegasus RestRequestBuilderGenerator yet.

(RB=443539)
Allow Resources to designate alternative keys with the @AlternativeKey and @AlternativeKeys annotation.
Only client side work has been done.  Resources can be called with alternative keys but builders have
not been modified to allow alternative key formats to be sent.

2.10.14
-------
(RB=554203)
Corrected CHANGELOG to correctly reflect changes made in 2.10.13.

2.10.13
-------
(RB=537449)
Change Rest.li validator API to expose validateInput() and validateOutput() instead of a single validate() method.

(RB=546217)
Changed multiplexer payload for IndividualRequest and IndividualResponse to use a real dictionary instead of a string.

(RB=550981)
Replaced requests in MultiplexedRequestContent and responses in MultiplexedResponseContent from array to map.

2.10.10
-----
(RB=540665)
Avoid logging error when there are https uris but the client is not ssl enabled.

2.10.9
-----
(RB=538153)
Fix race condition and refactory d2 announcer

2.10.8
-----
(RB=534988)
Changed RestResponseDecoder.wrapResponse to be public to account for a small number of
external users.

2.10.7
-----
(RB=540475)
Create d2 configuration to change Accept-Encoding header.

(RB=496051)
Added cookie support for restli.

2.10.6
-----
(RB=521169)
Added required vs optional validation for partial updates.
Changed validation path formats to match PathSpec.

(RB=533820)
Added batch create with entity back.
Enabled projection for createAndGet/BatchCreateAndGet.

(RB=538447)
Serialize query parameter with custom coercer and uses bytes as underlying type correctly.

2.10.5
-----
(RB=419425)
Align response compression with request compression.

(RB=529431)