@@ -3,6 +3,10 @@
 (RB=551668)
 Data generator generates unambiguous @see link.
 
+(RB=556232)
+Enable application to do additional processing on IndividualRequest and IndividualResponse by using
+MultiplexerSingletonFilter.
+
 2.10.15
 -------
 (RB=550595)
